# tep-manuscript

./: .gitignore  10-summary.md  20-summary.md  30-summary.md  40-summary.md  CLAUDE.md  DATASET_ASSESSMENT.md  DATASET_CHANGES.md  DATASET_DESCRIPTION.md  LICENSE  Makefile  README.md  _config.yml  _toc.yml  citation-verification-report.md  create_presentation.py  pyproject.toml  run_notebook.py  using-llms.md
manuscript/: Makefile  body.tex  main.tex  references.bib
notebooks/: 00-system.ipynb  01-create-datasets.ipynb  02-exploratory-data-analysis.ipynb  03-generate-new-tep-dataset.ipynb  04-generate-detector-trajectory.ipynb  04-tep-sim-data-validation.ipynb  05-generate-detector-trajectory.ipynb  10-xgboost-hyperparameter-tuning.ipynb  11-lstm-hyperparameter-tuning.ipynb  12-lstm-fcn-hyperparameter-tuning.ipynb  13-cnn-transformer-hyperparameter-tuning.ipynb  14-transkal-hyperparameter-tuning.ipynb  15-lstm-autoencoder-hyperparameter-tuning.ipynb  16-conv-autoencoder-hyperparameter-tuning.ipynb  17-hyperparameter-summary.ipynb  20-xgboost-final-training.ipynb  21-lstm-final-training.ipynb  22-lstm-fcn-final-training.ipynb  23-cnn-transformer-final-training.ipynb  24-transkal-final-training.ipynb  25-lstm-autoencoder-final-training.ipynb  26-conv-autoencoder-final-training.ipynb  27-model-comparison-summary.ipynb  30-xgboost-hmm-filter.ipynb  30-xgboost-new-data-evaluation.ipynb  31-lstm-hmm-filter.ipynb  31-lstm-new-data-evaluation.ipynb  32-lstm-fcn-hmm-filter.ipynb  32-lstm-fcn-new-data-evaluation.ipynb  33-cnn-transformer-hmm-filter.ipynb  41-lstm-hmm-filter.ipynb  (+29 more)
(+131 files in other folders)
