[project]
name = "tep-manuscript"
version = "0.1.0"
description = "Benchmarking Machine Learning Anomaly Detection Methods on the Tennessee Eastman Process Dataset"
authors = [
    {name = "Ethan M. Sunshine"},
    {name = "Naixin Lyu"},
    {name = "Suraj Botcha"},
    {name = "Eesha Kulkarni"},
    {name = "Shreya Pagaria"},
    {name = "Victor Alves"},
    {name = "John R. Kitchin", email = "jkitchin@andrew.cmu.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "torch>=2.5.0",
    "tensorflow>=2.18.0",
    "xgboost>=2.0.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyreadr>=0.5.0",
    "tqdm>=4.66.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
    "nbformat>=5.10.0",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
